--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,35 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+  body {
+    @apply bg-mineral-600;
+  }
+
+  h1 {
+    @apply text-primary-300;
+    @apply font-bold;
+    @apply text-3xl;
+    @apply font-serif;
+  }
+
+  h2 {
+    @apply text-primary-300;
+    @apply text-2xl;
+    @apply font-serif;
+  }
+
+  h3 {
+    @apply text-clay-200 text-xl;
+  }
+
+  h4 {
+    @apply text-clay-200 text-lg;
+    @apply font-light;
+  }
+
+  p {
+    @apply text-clay;
+  }
+}
