styles for large screens

--- a/api/contact/templates/contact/contact_form.html
+++ b/api/contact/templates/contact/contact_form.html
@@ -9,6 +9,6 @@
     {{ field.errors }}
     {{ field }}
   {% endfor %}
-  <button class="p-2 my-2 bg-primary-200 rounded-md text-lg"
+  <button class="p-2 my-2 text-coffee bg-primary-200 rounded-md text-lg"
     >Submit</button>
 </form>
