contnet updates, bump terraform deps

--- a/styles/tailwind.css
+++ b/styles/tailwind.css
@@ -32,6 +32,8 @@ code:after {
   display: none;
 }
 
+/* TODO: move tooltip styling into component */
+
 /**
  * Styling for the tooltips on the "toolbox" section.
  */
@@ -76,6 +78,8 @@ code:after {
 .tooltip-drf:hover:after {
   width: 200%;
 }
+
+/* TODO: move character icon CSS into components */
 
 /**
  * character-icons are the grid of icons above the contact form
