--- a/styles/tailwind.css
+++ b/styles/tailwind.css
@@ -23,6 +23,14 @@
   }
 }
 
+.prose p code {
+  @apply font-bold;
+}
+
+.prose a {
+  @apply rounded focus:ring-4 focus:ring-primary-400 outline-none;
+}
+
 /* tailwind puts backticks around inline <code> tags. This removes them */
 code:before {
   display: none;
