--- a/styles/tailwind.css
+++ b/styles/tailwind.css
@@ -38,5 +38,5 @@
 }
 
 .prose a {
-  @apply rounded focus:ring-4 focus:ring-primary-400 outline-none;
+  @apply rounded focus:ring-2 focus:ring-accent-300 outline-none;
 }
