scroll to top button for about page

--- a/styles/tailwind.css
+++ b/styles/tailwind.css
@@ -40,3 +40,17 @@
 .prose a {
   @apply rounded focus:ring-2 focus:ring-accent-300 outline-none;
 }
+
+
+.animate-pulse{
+animation: pulse 3s cubic-bezier(0.4, 0, 0.6, 1) infinite;
+}
+
+@keyframes pulse {
+  0%, 100% {
+    opacity: 1;
+  }
+  50% {
+    opacity: .85;
+  }
+}
